# oj-diary

./: .clang-format  .clangd  .gitconfig.local  .gitignore  .gitmessage  CMakeLists.txt  CMakePresets.json  GIT_WORKFLOW.md
Scripts/: lg.ps1
codeforces/: 2194A.cpp  2195A.cpp  A_Boy_or_Girl.cpp  A_Friendly_Numbers.cpp  A_Parkour_Design.cpp  A_Watermelon.cpp  A_Way_Too_Long_Words.cpp  B_Array_and_Permutation.cpp  B_Heapify_1.cpp  binary_string_segments.cpp  codeforce-2209B.cpp  codeforces-2194A-.cpp
leetcode/: 1722_minimize-hamming-distance-after-swap-operations.cpp  2946.matrix-similarity-after-cyclic-shifts.cpp  leetcode_1320_minimum-distance-to-type-a-word-using-two-fingers.c  leetcode_1353_maximum-number-of-events-that-can-be-attended.c  leetcode_1391_check-if-there-is-a-valid-path-in-a-grid.c  leetcode_1394_find-lucky-integer-in-an-array.c  leetcode_1432_max-difference-you-can-get-from-changing-an-integer.c  leetcode_1498_number-of-subsequences-that-satisfy-the-given-sum-condition.c  leetcode_1526_minimum-number-of-increments-on-subarrays-to-form-a-target-array.c  leetcode_1559_detect-cycles-in-2d-grid.c  leetcode_1716_calculate-money-in-leetcode-bank.c  leetcode_1722_minimize-hamming-distance-after-swap-operations.c  leetcode_1722_minimize-hamming-distance-after-swap-operations.cpp  leetcode_1848_minimum-distance-to-the-target-element.c  leetcode_1855_maximum-distance-between-a-pair-of-values.c  leetcode_1855_maximum-distance-between-a-pair-of-values.cpp  leetcode_1865_finding-pairs-with-a-certain-sum.c  leetcode_2014_longest-subsequence-repeated-k-times.c  (+53 more)
(+2 files in other folders)
